bad/array_subscript_invalid_subscript_type_bool.example_compiler_output
ERROR
[1mbad/array_subscript_invalid_subscript_type_bool.lat:4:5: [1;31merror: [0;1marray subscript has to be of type `int`, not `boolean`[m
	arr[true];
	   [1;32m^[m
